android/travis: Replace configure-on-demand by parallel for gradlew

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
 script:
   - cd shell/android-studio
   - chmod +x gradlew
-  - ./gradlew assembleDreamcastDebug --configure-on-demand --console=plain
+  - ./gradlew assembleDreamcastDebug --console=plain --parallel
 
 before_deploy:
   - cd ../../
