--- a/core/version.h.in
+++ b/core/version.h.in
@@ -5,4 +5,4 @@
 
 #define REICAST_VERSION "@GIT_VERSION@"
 #define GIT_HASH		"@GIT_HASH@"
-#define BUILD_DATE		__DATE__
+#define BUILD_DATE		"@BUILD_TIMESTAMP@"
